# sentinel

./: .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  README.md  codecov.yml  package-lock.json  package.json  release.config.mjs  rustfmt.toml  tarpaulin.toml  update-deps.js
.github/: copilot-instructions.md  dependabot.yml  release-please-config.json  release-please-manifest.json
.github/workflows/: benchmark.yml  clippy.yml  codeql.yml  coverage.yml  deploy-docs.yml  format.yml  opencode.yml  profiling.yml  publish.yml  release-cxx.yml  release-please.yml  release-python.yml  release.yml  sonarcloud.yml  test.yml
.opencode/agent/: review.md
bindings/: build-cxx.sh  cbuild.py  sync_api.py
bindings/cxx/: BINDING_UPDATE_WORKFLOW.md  CMakeLists.txt  README.md  cbuild.py  sync_api.py
bindings/cxx/cmake/: sentinel-cxx-config.cmake.in
bindings/cxx/examples/: c_advanced_query_example.c  c_async_example.c  c_async_query_example.c  c_complex_query_example.c  c_example.c  c_query_example.c  cpp_example.cpp  sentinel-cxx.h  test_c_bindings.c
bindings/cxx/include/sentinel/: sentinel-cxx.h  sentinel.hpp
bindings/cxx/src/: sentinel.cpp
bindings/cxx/tests/: cpp_tests.cpp
bindings/js/: README.md  example-esm.mjs  example.js  index.d.ts  index.js  package-lock.json  package.json  rollup.config.js  sentinel-js
bindings/js/tests/: integration.js
bindings/python/: MANIFEST.in  README.md  example_python_bindings.py  setup.py  test_python_bindings.py
bindings/python/sentinel/: __init__.py  py.typed  sentinel_python.pyi
bindings/wasm/: package.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  logging.rs  main.rs
crates/cli/src/commands/: bulk_insert.rs  create_collection.rs  delete.rs  generate.rs  generate_key.rs  get.rs  init.rs  insert.rs  list.rs  mod.rs  query.rs  update.rs  wal.rs
crates/cli/src/commands/collection/: aggregate.rs  bulk_insert.rs  count.rs  create.rs  delete.rs  get.rs  get_many.rs  info.rs  insert.rs  list.rs  mod.rs  query.rs  update.rs  upsert.rs
crates/cli/src/commands/store/: delete.rs  generate.rs  init.rs  list.rs  mod.rs  stats.rs
crates/cli/src/commands/wal/: checkpoint.rs  list.rs  mod.rs  recover.rs  stats.rs  verify.rs
crates/sentinel/: Cargo.toml
crates/sentinel-crypto/: Cargo.toml
crates/sentinel-crypto/benches/: crypto_benches.rs
crates/sentinel-crypto/src/: crypto_config.rs  encrypt.rs  encrypt_trait.rs  error.rs  hash.rs  hash_trait.rs  key.rs  key_derivation_trait.rs  lib.rs  sign.rs  sign_trait.rs
crates/sentinel-crypto/src/encrypt/: aes_gcm.rs  aes_gcm_siv.rs  ascon128.rs  encryption_key.rs  mod.rs  xchacha20_poly1305.rs
crates/sentinel-crypto/src/hash/: blake3.rs  mod.rs
crates/sentinel-crypto/src/key_derivation/: argon2.rs  blake3_simple.rs  mod.rs  pbkdf2.rs
crates/sentinel-crypto/src/sign/: ed25519.rs  mod.rs  signing_key.rs
crates/sentinel-cxx/: Cargo.toml  build.rs  cbindgen.toml
crates/sentinel-cxx/src/: lib.rs
crates/sentinel-cxx/tests/: cxx_integration.rs
crates/sentinel-js/: Cargo.toml  build.rs
crates/sentinel-js/src/: lib.rs
crates/sentinel-js/tests/: integration.rs  nodejs.rs
crates/sentinel-python/: Cargo.toml
crates/sentinel-python/src/: lib.rs
crates/sentinel-wal/: Cargo.toml
crates/sentinel-wal/benches/: wal_benches.rs
crates/sentinel-wal/src/: compression.rs  config.rs  entry.rs  error.rs  lib.rs  manager.rs  recovery.rs  tests.rs  traits.rs  verification.rs
crates/sentinel-wal/src/compression/: brotli.rs  compression_trait.rs  deflate.rs  gzip.rs  lz4.rs  mod.rs  zstd.rs
crates/sentinel-wasm/: Cargo.toml
crates/sentinel-wasm/src/: lib.rs
crates/sentinel/benches/: collection_ops.rs  concurrent_benches.rs  fuzzy_testing.rs  load_testing.rs  memory_benches.rs
crates/sentinel/src/: collection.rs  comparison.rs  constants.rs  document.rs  error.rs  events.rs  filtering.rs  lib.rs  main.rs  metadata.rs  projection.rs  query.rs  store.rs  streaming.rs  validation.rs  verification.rs  wal.rs
crates/sentinel/src/collection/: aggregation.rs  coll.rs  collection.rs  mod.rs  operations.rs  query.rs  streaming.rs  tests.rs  verification.rs  wal.rs
crates/sentinel/src/store/: events.rs  mod.rs  operations.rs  stor.rs  store.rs  tests.rs  validation.rs
crates/sentinel/src/wal/: config.rs  metadata.rs  mod.rs  ops.rs  recovery.rs  verification.rs
docs/: LICENSE  README.md  astro.config.mts  components.json  env.d.ts  eslint.config.mts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
docs/public/: gtm.js
docs/src/: content.config.ts
docs/src/components/: Footer.tsx  Header.tsx  SearchModal.tsx  SidebarNavigation.tsx  SiteFooter.tsx  SiteHeader.tsx  TableOfContents.tsx  code.astro  table.astro  visually-hidden-input.tsx
docs/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  color-picker.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  label.tsx  popover.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  spinner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
docs/src/content/docs/: api-reference.mdx  architecture.mdx  best-practices.mdx  cli-commands.mdx  cli-reference.mdx  collection.md  collection.mdx  cpp-bindings.mdx  cryptography.mdx  document.md  document.mdx  errors.md  errors.mdx  examples.mdx  installation.mdx  introduction.md  introduction.mdx  language-bindings.mdx  migration-guide.mdx  nodejs-bindings.mdx  python-bindings.mdx  querying.mdx  quick-start.md  quick-start.mdx  releases.mdx  store.md  store.mdx  troubleshooting.mdx  wal.mdx  (+4 more)
docs/src/hooks/: use-as-ref.ts  use-isomorphic-layout-effect.ts  use-lazy-ref.ts
docs/src/layouts/: BaseLayout.astro  DocsLayout.astro  Layout.astro
docs/src/lib/: compose-refs.ts  constants.ts  docs.ts  make-json-ld.ts  utils.ts
docs/src/pages/: data-index.json.ts  data.json.ts  docs.astro  fuse.config.ts  index.astro
docs/src/styles/: global.css
scripts/: release.mjs  run_coverage.sh
(+1 files in other folders)
