[package]
name = "sentinel-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Command-line interface for Cyberpath Sentinel DBMS."
keywords = ["cli", "database", "document", "dbms"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
sentinel = { path = "../sentinel" }
sentinel-crypto = { path = "../sentinel-crypto" }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
clap = { version = "4.5.54", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "fmt", "env-filter"] }
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.24.0"

[lints]
workspace = true