[package]
name = "sentinel-crypto"
version = "0.1.0"
edition = "2024"
description = "Cryptographic utilities for Cyberpath Sentinel, including hashing and signing."
license = "Apache-2.0"
repository = "https://github.com/cyberpath-HQ/sentinel"
readme = "../README.md"
keywords = ["crypto", "hashing", "signing", "ed25519", "blake3"]
categories = ["cryptography"]

[dependencies]
serde_json = "1.0.149"
blake3 = { version = "1.8.3", features = ["rayon"] }
ed25519-dalek = { version = "2.1", features = ["zeroize"] }
rand = "0.8"
hex = "0.4.3"
signature = "2.2"
thiserror = "2.0.17"
zeroize = "1.8.2"
aes-gcm = "0.10"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "crypto_benches"
harness = false