[package]
name = "sentinel-cxx"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
description = "C/C++ bindings for Cyberpath Sentinel DBMS"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "sentinel_cxx"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sentinel-dbms = { path = "../sentinel" }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
once_cell = "1.20.0"

[build-dependencies]
cbindgen = "0.26.0"

[lints]
workspace = true