[package]
name = "sentinel-cxx"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
description = "C/C++ bindings for Cyberpath Sentinel DBMS"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "sentinel_cxx"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sentinel-dbms = { path = "../sentinel" }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
once_cell = "1.21.3"
futures = "0.3.31"

[dev-dependencies]
num_cpus = "1.17.0"
serial_test = "3.0"

[build-dependencies]
cbindgen = "0.29.2"

[lints]
workspace = true