[package]
name = "sentinel-js"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
description = "Node.js bindings for Cyberpath Sentinel DBMS"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "sentinel_js"
crate-type = ["cdylib"]

[dependencies]
sentinel-dbms = { path = "../sentinel" }
napi = { version = "2.16.0", features = ["async", "serde-json"] }
napi-derive = "2.16.0"
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[build-dependencies]
napi-build = "2.1.0"

[dev-dependencies]
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"

[profile.release]
opt-level = 3
lto = true

[lints]
workspace = true
