[package]
name = "sentinel-wal"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
description = "Write-Ahead Logging (WAL) implementation for Cyberpath Sentinel"
license.workspace = true
repository.workspace = true
keywords = ["database", "wal", "logging", "durability", "rust"]
categories = ["database-implementations", "filesystem"]

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
crc32fast = "1.5.0"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
tracing = "0.1.44"
async-trait = "0.1.89"
cuid2 = "0.1.4"
async-compression = { version = "0.4.37", features = ["tokio", "zstd", "lz4", "brotli", "deflate", "gzip"] }
futures = "0.3.31"
async-stream = "0.3.6"

[dev-dependencies]
tempfile = "3.24.0"
criterion = { version = "0.8.1", features = ["html_reports", "async_futures"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints]
workspace = true

[[bench]]
name = "wal_benches"
harness = false