[package]
name = "sentinel-wasm"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
description = "WebAssembly bindings for Cyberpath Sentinel DBMS"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "sentinel_wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
  "console",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
sha2 = "0.10"
hex = "0.4.3"
base64 = "0.22"

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
