[package]
name = "sentinel"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
sentinel-crypto = { path = "../sentinel-crypto" }
ed25519-dalek = "2.1"

[dev-dependencies]
tempfile = "3.24.0"
criterion = { version = "0.8.1", features = ["html_reports"] }
ed25519-dalek = "2.1"
rand = "0.8"

[lints]
workspace = true

[[bench]]
name = "collection_ops"
harness = false
