[package]
name = "sentinel-dbms"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
chrono = { version = "0.4.43", features = ["serde"] }
sentinel-crypto = { version = "2.0.1", path = "../sentinel-crypto" }
sentinel-wal = { version = "2.0.1", path = "../sentinel-wal" }
hex = "0.4.3"
tracing = "0.1.44"
tokio-stream = "0.1.18"
futures = "0.3.31"
async-stream = "0.3.6"
cuid2 = "0.1.4"

[dev-dependencies]
tempfile = "3.24.0"
criterion = { version = "0.8.1", features = ["html_reports", "async_futures"] }
rand = "0.8"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serial_test = "3.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[[bench]]
name = "collection_ops"
harness = false

[[bench]]
name = "concurrent_benches"
harness = false

[[bench]]
name = "fuzzy_testing"
harness = false

[[bench]]
name = "load_testing"
harness = false

[[bench]]
name = "memory_benches"
harness = false